jalv (1.4.7) unstable;

  * Improve preset support
  * Set Jack port order metadata
  * Add command prompt to console version for changing controls
  * Exit on Jack shutdown (Patch from Robin Gareus)
  * Report Jack latency (Patch from Robin Gareus)
  * Exit GUI versions on interrupt
  * Fix semaphore correctness issues
  * Use moc-qt4 if present for systems with multiple Qt versions

 -- David Robillard <d@drobilla.net>  Sat, 07 Mar 2015 03:44:18 -0500

jalv (1.4.6) stable;

  * Show newly saved presets in the preset menu
  * Generate Qt moc nonsense at build time for broader compatibility
  * Update for latest LV2 Atom Object simplifications
  * Set port pretty names via new Jack metadata API
  * Add support for data-access extension (based on patch by Filipe Coelho)
  * Support new UI show/hide interface in console version
  * Add option to print control output changes to stdout
  * Support saving the same preset several times
  * Update man pages and console jalv help output for new options
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:30:28 -0400

jalv (1.4.4) stable;

  * Add -c option for setting controls from the command line
  * Add --no-menu option for jalv.gtk
  * Don't expose non-MIDI event ports to Jack
  * Hide controls for ports with notOnGUI property in generic UI
    (based on patch from Robin Gareus)
  * Support ui:portMap feature to allow UIs to avoid hard-coded port indices
    (useful for compatibility and separately distributed UIs)
  * Preset menu support for Qt (patch from Timo Westkämper)

 -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 16:11:45 -0500

jalv (1.4.2) stable;

  * Fix crash when running "jalv" with bad command line arguments
  * Fix potential crash with UIs and debug printing
  * Fix parameter changes with Qt UI
  * Nicer printing of atom messages with -d
  * Add command-line option to control UI update frequency
  * Support rsz:minimumSize for atom and event ports