@@ -9,3 +9,6 @@ Various UI improvements:
 
 Preset menu support for Qt:
 	Timo Westkämper <timo.westkamper@gmail.com>
+
+Qt4 Generic Plugin UI:
+	Amadeus Folego <amadeusfolego@gmail.com>
